--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "nodemon src/server.js"
+    "startBack": "nodemon BACKEND/src/server.js"
   },
   "dependencies": {
     "axios": "^1.5.1",
