--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -23,10 +23,11 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /home/zekypi/Documents/SAEBUT2/FRONT
+          cd ~/Documents/SAEBUT2/
           git pull origin main
           git status
+          cd FRONT
           npm install 
           npm run build
-          sudo rsync -av --delete /home/zekypi/Documents/SAEBUT2/dist/ /var/www/sae
+          sudo rsync -av --delete ~/Documents/SAEBUT2/FRONT/dist/ /var/www/sae
           sudo systemctl restart apache2
