--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -27,10 +27,8 @@ jobs:
           ssh-add ~/.ssh/githubkey
           cd ~/Documents/SAEBUT2/
           git pull origin main
-          git status
-          cd FRONT
-          npm install 
-          npm run build
-          
+          cd FRONT/
+          ~/.nvm/versions/node/v21.1.0/bin/npm install
+          ~/.nvm/versions/node/v21.1.0/bin/npm run build
           sudo rsync -av --delete ~/Documents/SAEBUT2/FRONT/dist/ /var/www/sae
           sudo systemctl restart apache2
