--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
     "three": "^0.158.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
