--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
+    "swiper": "^11.0.4",
     "three": "^0.158.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
