--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -26,6 +26,7 @@ jobs:
           eval "$(ssh-agent -s)"
           ssh-add ~/.ssh/githubkey
           cd ~/Documents/SAEBUT2/
+          git reset --hard origin/main
           git pull origin main
           cd FRONT/
           source ~/.nvm/nvm.sh
