--- a/BACKEND/src/.env
+++ b/BACKEND/src/.env
@@ -1,7 +1,7 @@
 PORT=3000
 jwtSecret=djilsietmaxime
-DB_USERNAME=mhammedev
+DB_USERNAME=calixte
 DB_PORT=5432
 DB_HOST=localhost
-DB_DATABASE=bdd_mhammedsae
-DB_PASSWORD=1206
+DB_DATABASE=sae
+DB_PASSWORD=calixtemdp
