--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "swiper": "^11.0.4",
     "three": "^0.158.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.5.1",
     "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
