--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
+    "particles.js": "^2.0.0",
     "swiper": "^11.0.4",
     "three": "^0.158.0",
     "vue": "^2.6.14",
