--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -25,6 +25,7 @@
     "particles.js": "^2.0.0",
     "swiper": "^11.0.4",
     "three": "^0.158.0",
+    "tippy.js": "^6.3.7",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.2.0",
     "vue-fullcalendar": "^1.0.9",
