--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.8.3",
     "fullcalendar": "^6.1.10",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "particles.js": "^2.0.0",
     "swiper": "^11.0.4",
