--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -29,6 +29,7 @@
     "tippy.js": "^6.3.7",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.2.0",
+    "vue-date-pick": "^1.5.1",
     "vue-fullcalendar": "^1.0.9",
     "vue-router": "^3.5.1",
     "vue2-leaflet": "^2.7.1",
