--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -35,6 +35,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-date-pick": "^1.5.1",
     "vue-fullcalendar": "^1.0.9",
+    "vue-i18n": "^8.28.0",
     "vue-router": "^3.5.1",
     "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
