--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "particles.js": "^2.0.0",
+    "qrcode": "^1.5.3",
     "sass": "^1.69.7",
     "sass-loader": "^13.3.3",
     "swiper": "^11.0.4",
