--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -29,6 +29,8 @@ jobs:
           git pull origin main
           source ~/.nvm/nvm.sh
           nvm use 21.1.0
+          psql -d bddsae -f sae_belfo.sql
+          psql -d bddsae -f insert_sae.sql
           cd BACKEND/
           pm2 restart default
           cd ../FRONT/
