--- a/BACKEND/src/package.json
+++ b/BACKEND/src/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
