Ajout des fonctionnalite de map2D (Surement cassé encore) + fix bug axiosAgent

--- a/FRONT/.gitignore
+++ b/FRONT/.gitignore
@@ -4,6 +4,8 @@ node_modules
 /BACKEND/.package-lock.json
 /FRONT/.package-lock.json
 
+*/.package-lock.json
+
 # local env files
 .env.local
 .env.*.local
