--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -39,6 +39,7 @@
     "vue-i18n": "^8.28.0",
     "vue-router": "^3.5.1",
     "vue2-leaflet": "^2.7.1",
+    "vue2-leaflet-markercluster": "^3.1.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
