--- a/FRONT/package.json
+++ b/FRONT/package.json
@@ -34,6 +34,7 @@
     "tippy.js": "^6.3.7",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.2.0",
+    "vue-click-outside": "^1.1.0",
     "vue-date-pick": "^1.5.1",
     "vue-fullcalendar": "^1.0.9",
     "vue-i18n": "^8.28.0",
